--- a/styles.css
+++ b/styles.css
@@ -10,72 +10,96 @@
 	position: relative;
 }
 
-.marker {
-	height: 50px;
-	width: 50px;
-	background-color: lightgray;
-	display: inline-block;
-	margin: 0;
-	padding: 0;
-	font-size: 0;
-
-}
-	#marker1 {
-		position: absolute;
-		top: 10px;
-		left: 10px;
-	}
-	#marker2 {
-		position: absolute;
-		top: 10px;
-		right: 10px;
-	}
-	#marker3 {
-		position: absolute;
-		bottom: 10px;
-		left: 10px;
-	}
-	#marker4 {
-		position: absolute;
-		bottom: 10px;
-		right: 10px;
-	}
-
-.popup {
-	display: none;
-	position: absolute;
-}
-
-	.line1 {
-		display: none;
-		background-color: blue;
-		width: 50px;
-		height: 2px;
-		margin: 0;
-		padding: 0;
-		position: relative;
-		font-size: 0;
-	}
-	.line2 {
-		display: none;
-		background-color: red;
-		width: 2px;
+	.marker {
 		height: 50px;
+		width: 50px;
+		background-color: lightgray;
+		display: inline-block;
 		margin: 0;
 		padding: 0;
-		position: relative;
 		font-size: 0;
+	
 	}
-	.content {
+		#section1 {
+			position: absolute;
+			top: 10px;
+			left: 10px;
+		}
+			#marker1 {
+				position: absolute;
+				top: 0;
+				left: 0;
+			}
+		
+		#section2 {
+			position: absolute;
+			top: 10px;
+			right: 10px;
+		}
+			#marker2 {
+				position: absolute;
+				top: 0;
+				right: 0;
+			}
+			
+		#section3 {
+			position: absolute;
+			bottom: 10px;
+			left: 10px;
+		}
+			#marker1{
+				position: absolute;
+				bottom: 0;
+				left: 0;
+			}
+			
+		#section4 {
+			position: absolute;
+			bottom: 10px;
+			right: 10px;
+		}
+			#marker1{
+				position: absolute;
+				bottom: 0;
+				right: 0;
+			}
+			
+	
+	.popup {
 		display: none;
-		background-color: gray;
-		width: 300px;
-		margin: 0;
-		position: relative;
+		position: absolute;
 	}
-		.content p {
+	
+		.line1 {
+			display: none;
+			background-color: blue;
+			width: 50px;
+			height: 2px;
 			margin: 0;
+			padding: 0;
+			position: relative;
+			font-size: 0;
 		}
-		.close {
-			color: red;
+		.line2 {
+			display: none;
+			background-color: red;
+			width: 2px;
+			height: 50px;
+			margin: 0;
+			padding: 0;
+			position: relative;
+			font-size: 0;
 		}
+		.content {
+			display: none;
+			background-color: gray;
+			width: 300px;
+			margin: 0;
+			position: relative;
+		}
+			.content p {
+				margin: 0;
+			}
+			.close {
+				color: red;
+			}
