--- a/styles.css
+++ b/styles.css
@@ -73,8 +73,8 @@
 		.line1 {
 			display: none;
 			background-color: blue;
-			width: 50px;
-			height: 2px;
+			/* width: 50px; */
+			/* height: 2px; */
 			margin: 0;
 			padding: 0;
 			position: relative;
@@ -83,8 +83,8 @@
 		.line2 {
 			display: none;
 			background-color: red;
-			width: 2px;
-			height: 50px;
+			/* width: 2px; */
+			/* height: 50px; */
 			margin: 0;
 			padding: 0;
 			position: relative;
