--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@
 	height: 500px;
 	width: 500px;
 	border: 1px solid black;
-	overflow: auto;
-	position: relative;
+	overflow: none;
+    position: relative;
 }
 
 	.marker {
@@ -22,8 +22,8 @@
 	}
 		#section1 {
 			position: absolute;
-			top: 10px;
-			left: 10px;
+            top: 20px;
+            left: 20px;
 		}
 			#marker1 {
 				position: absolute;
@@ -33,8 +33,8 @@
 		
 		#section2 {
 			position: absolute;
-			top: 10px;
-			right: 10px;
+            top: 20px;
+            right: 20px;
 		}
 			#marker2 {
 				position: absolute;
@@ -44,8 +44,8 @@
 			
 		#section3 {
 			position: absolute;
-			bottom: 10px;
-			left: 10px;
+            bottom: 20px;
+            left: 20px;
 		}
 			#marker3{
 				position: absolute;
@@ -55,8 +55,8 @@
 			
 		#section4 {
 			position: absolute;
-			bottom: 10px;
-			right: 10px;
+            bottom: 20px;
+            right: 20px;
 		}
 			#marker4{
 				position: absolute;
@@ -65,10 +65,6 @@
 			}
 			
 	
-	.popup {
-		display: none;
-		position: absolute;
-	}
 	
 		.line1 {
 			display: none;
@@ -77,7 +73,7 @@
 			/* height: 2px; */
 			margin: 0;
 			padding: 0;
-			position: relative;
+			position: absolute;
 			font-size: 0;
 		}
 		.line2 {
@@ -87,7 +83,7 @@
 			/* height: 50px; */
 			margin: 0;
 			padding: 0;
-			position: relative;
+			position: absolute;
 			font-size: 0;
 		}
 		.content {
@@ -95,7 +91,7 @@
 			background-color: gray;
 			width: 300px;
 			margin: 0;
-			position: relative;
+			position: absolute;
 		}
 			.content p {
 				margin: 0;
