--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,20 @@
     position: relative;
 }
 
+    #overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        filter:alpha(opacity=50);
+        -moz-opacity:0.5;
+        -khtml-opacity: 0.5;
+        opacity: 0.5;
+        z-index: 10;
+    }
+
 	.marker {
 		height: 50px;
 		width: 50px;
