--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,8 @@
 	}
 
 	.marker {
-		height: 25px;
-		width: 25px;
+		height: 26px;
+		width: 26px;
 		background-color: #f47321;
 		display: inline-block;
 		margin: 0;
@@ -65,16 +65,27 @@
 				bottom: 0;
 			}
 
-		/* #section4 {
+		#section4 {
 			position: absolute;
-			bottom: 20px;
-			right: 20px;
+			top: 20px;
+			left: 20px;
 		}
 			#marker4{
 				position: absolute;
-				bottom: 0;
+				top: 0;
+				left: 0;
+			}
+
+        #section5 {
+			position: absolute;
+			top: 20px;
+			right: 20px;
+		}
+			#marker5 {
+				position: absolute;
+				top: 0;
 				right: 0;
-			} */
+			}
 
 
 
@@ -104,7 +115,6 @@
 			padding: 20px;
 			opacity: .8;
 			width: 260px;
-			margin: 0;
 			position: absolute;
 		}
 			.content p {
