--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,10 @@
 
 #overlay { background: rgba(0,0,0,.5); width:100%; height:100%; position:absolute; top:0; left:0; display:none; z-index:9; }
 
-.marker { height:15px; width:15px; background-color:#f47321; display:inline-block; margin:2px; padding:0; font-size:0; z-index: 999; position:absolute; border-radius:2px; }
-
-.marker-section { position:absolute; border:2px solid #f47321; border-radius:3px; height:19px; width:19px; z-index:999; } 
+.marker { height:15px; width:15px; background-color:#f47321; display:inline-block; margin:2px; padding:0; font-size:0; z-index: 9; position:absolute; border-radius:2px; }
+	.marker-border { position:absolute; border:2px solid #f47321; border-radius:3px; height:19px; width:19px; z-index:9; margin:10px; }
+	.marker-background { position:absolute; background: rgba(0,0,0,.5); border-radius:4px; height:43px; width:43px; }
+		.transparent { background-color: transparent; } 
 
 #section1 { bottom: 208px; left: 79px; }
 	#marker1 { bottom:0; left:0; }
@@ -33,3 +34,4 @@
 	.content p { margin: 0; color: #5f6062; font-family: 'SoinSansPro-Roman'; }
 	.content-image { position: relative; top: -20px; left: -20px; z-index: 50; float: left; display: inline-block; }
 	.close { color: #f47321; font-size: 20px; text-decoration: none; position: absolute; top: 0; right: 0;  }
+	
